<resources>
    <string name="app_name">Habitizer</string>
    <string name="routine">Routine</string>
    <string name="morning_routine">Morning Routine</string>
    <string name="evening_routine">Evening Routine</string>
    <string name="morning_">Morning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="end_routine">End</string>
    <string name="finished_routine">Routine Ended</string>
    <string name="time">time</string>
    <string name="swap_views">Swap Views</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="out_of">Out Of:</string>
    <string name="stop_time">Stop</string>
    <string name="advance_time">Advance</string>
    <string name="nothing">---</string>
    <string name="input_name">Input Name</string>
    <string name="dashes">---</string>
    <string name="reset">Reset</string>
    <string name="routines">Routines</string>
    <string name="home">Home</string>
    <string name="add_task">Add Task</string>
    <string name="minutes">%d mins</string>
    <string name="task">Task</string>
    <string name="time_taken">Time taken: --</string>
    <string name="no_text" />
</resources>