<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/routine_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/home"
            android:translationX="-5dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_home"
            tools:ignore="VisualLintBounds" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/routine_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:gravity="left|center_vertical"
                android:text="---"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/time_elapsed"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <TextView
                android:id="@+id/routine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:gravity="center_vertical"
                android:text="@string/morning_routine"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_elapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="148dp"
                android:gravity="center_vertical"
                android:text="Time:"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/task_time_header"
                android:layout_width="23dp"
                android:layout_height="25dp"
                android:layout_marginEnd="148dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="⏱:"
                android:textAlignment="gravity"
                android:textSize="20sp"
                app:flow_wrapMode="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="HardcodedText,TextSizeCheck" />

            <TextView
                android:id="@+id/goal_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:gravity="left|center_vertical"
                android:text="@string/dashes"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toEndOf="@+id/routine_time"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:gravity="left|center_vertical"
                android:text="@string/nothing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/task_time_header"
                app:layout_constraintTop_toBottomOf="@+id/routine_time"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlHardcoded" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="edu.ucsd.cse110.habitizer.app.ui.tasklist.TaskListFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routine_bar"
        tools:layout="@layout/fragment_task_list" />


    <ImageButton
        android:id="@+id/add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/end_routine"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <!-- Buttons for test purposes only
    <Button
        android:id="@+id/stop_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stop_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize"
        tools:visibility="visible" />

    <Button
        android:id="@+id/advance_time_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/advance_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize"
        tools:visibility="visible" />
       -->

</androidx.constraintlayout.widget.ConstraintLayout>